Production-Org-Metadata/force-app/main/default/objects/Salary_History_Tracking__c/Salary_History_Tracking__c.object-meta.xml
<CustomObject>
    <label>Salary History Tracking</label>
    <nameField>
        <label>Salary History Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salary History Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>