Production-Org-Metadata/force-app/main/default/objects/Salary_History_Tracking__c/fields/Basic_Console__c.field-meta.xml
<CustomField>
    <fullName>Basic_Console__c</fullName>
    <label>Basic Console</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>