Production-Org-Metadata/force-app/main/default/objects/Salary_History_Tracking__c/fields/CONV__c.field-meta.xml
<CustomField>
    <fullName>CONV__c</fullName>
    <label>CONV</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>