Production-Org-Metadata/force-app/main/default/objects/Salary_History_Tracking__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Salary History Tracking</relationshipLabel>
    <relationshipName>Salary_History_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>