Production-Org-Metadata/force-app/main/default/objects/Salary_History_Tracking__c/fields/ESI__c.field-meta.xml
<CustomField>
    <fullName>ESI__c</fullName>
    <label>ESI</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>