Production-Org-Metadata/force-app/main/default/objects/Salary_History_Tracking__c/fields/HRA__c.field-meta.xml
<CustomField>
    <fullName>HRA__c</fullName>
    <label>HRA</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>