Production-Org-Metadata/force-app/main/default/objects/Salary_History_Tracking__c/fields/Increment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Increment_Amount__c</fullName>
    <label>Increment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>