Production-Org-Metadata/force-app/main/default/objects/Salary_History_Tracking__c/fields/Increment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Increment_Percent__c</fullName>
    <label>Increment Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>