Production-Org-Metadata/force-app/main/default/objects/Salary_History_Tracking__c/fields/PF__c.field-meta.xml
<CustomField>
    <fullName>PF__c</fullName>
    <label>PF</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>