Production-Org-Metadata/force-app/main/default/objects/Salary_History_Tracking__c/fields/Security_Deposite__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposite__c</fullName>
    <label>Security Deposite</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>