Production-Org-Metadata/force-app/main/default/objects/Salary_History_Tracking__c/fields/SP_All__c.field-meta.xml
<CustomField>
    <fullName>SP_All__c</fullName>
    <label>SP. All</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>