Production-Org-Metadata/force-app/main/default/objects/Salary_History_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Increment_Amount__c</columns>
    <columns>Current_Salary__c</columns>
    <columns>Previous_Salary__c</columns>
    <columns>Is_Current__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>